Fix broken styling on small mobile screens

--- a/src/App.scss
+++ b/src/App.scss
@@ -124,12 +124,26 @@ input:focus {
   @include border;
   margin: 60px 0px;
   padding: 15px;
-  width: 375px;
+  max-width: 375px;
+  width: 87%;
   .main__logo {
     z-index: 1;
     margin: 40px;
     transform: scale(0.65, 0.65);
   }
+  @media only screen and (max-device-width: 340px) {
+    .main__logo {
+      transform: scale(0.5, 0.5);
+    }
+    h2 {
+      font-size: 1.25rem;
+    }
+    .main {
+      width: 82%;
+    }
+
+  }
+  
   .main__header {
     margin-bottom: 30px;
     text-align: center;
